...

    <!-- menu labels (or icon, buttons...) -->
    <string name="menu_new_contact">New Contact</string>
    <string name="menu_new_classic_contact">Add Contact Manually</string>
    <string name="new_classic_contact_explain">Manually added contacts can be used to text to classic e-mail and are not guaranteed end-to-end encrypted.</string>
    <string name="menu_new_chat">New Chat</string>
    <string name="menu_new_group">New Group</string>
    <string name="clone_chat">Clone Chat</string>
    <!-- consider keeping the term "broadcast" as in WhatsApp or Telegram -->
    <string name="broadcast_list">Broadcast List</string>
    <string name="broadcast_lists">Broadcast Lists</string>
    <string name="new_broadcast_list">New Broadcast List</string>
    <string name="add_recipients">Add Recipients</string>
...
    <string name="chat_record_explain">Tap and hold to record a voice message, release to send</string>
    <string name="chat_no_chats_yet_title">No Chats.\nPress \"+\" to start a new chat.</string>
    <!-- deprecated -->
    <string name="chat_no_chats_yet_hint">You can chat with other Delta Chat users and with any e-mail address.</string>
    <string name="chat_all_archived">All chats archived.\nPress \"+\" to start a new chat.</string>
    <string name="chat_share_with_title">Share with</string>
    <string name="chat_input_placeholder">Message</string>
    <string name="chat_archived_label">Archived</string>
    <string name="chat_request_label">Request</string>
    <string name="chat_no_messages">No messages.</string>
    <string name="chat_self_talk_subtitle">Messages to Self</string>
    <string name="archive_empty_hint">Archived chats will appear here.</string>
    <string name="saved_messages">Saved Messages</string>
...
    <string name="search_files">Search Files</string>
    <string name="search_explain">Search for chats, contacts, and messages</string>
    <string name="search_no_result_for_x">No results found for \"%s\"</string>


    <!-- create/edit groups, contact/group profile -->
    <string name="group_name">Group Name</string>
    <string name="group_avatar">Group Image</string>
    <string name="remove_group_image">Remove Group Image</string>
    <string name="change_group_image">Change Group Image</string>
    <string name="group_create_button">Create Group</string>
    <string name="group_please_enter_group_name">Please enter a name for the group.</string>
    <string name="group_add_members">Add Members</string>
    <string name="group_self_not_in_group">You must be a member of the group to perform this action.</string>
    <string name="profile_encryption">Encryption</string>
    <string name="profile_shared_chats">Shared Chats</string>
    <string name="related_chats">Related Chats</string>
...
